Adding some changes

--- a/index.html
+++ b/index.html
@@ -8,104 +8,104 @@
     </head>
     <body>
         <main id="main">
-            <h1 id="title">Dr. Norman Borlaugh</h1>
-            <p>The man who saved a million lives</p>
+            <h1 id="title">Hugo Sánchez</h1>
+            <p>The greatest Mexican Football Player</p>
             <figure id="img-div">
-                <img id="image" src="./images/tribute-page-main-image.jpg" alt="Dr. Norman Borlaugh seen standing in Mexican wheat field with a group of biologists"/>
+                <img id="image" src="./images/Hugo_chilena_goal.jpg" alt="Hugo Sánchez scoring a chilena goal, when playing at Real Madrid"/>
                 <figcaption id="img-caption">
-                    Dr. Norman Borlaug, third from the left, trains biologists in Mexico on
-            how to increase wheat yields - part of his life-long war on hunger.
+                    Hugo Sánchez in the air, scoring a chilena goal, when playing in Real Madrid.
                 </figcaption>
             </figure>
             <section id="tribute-info">
                 <h3 id="headline">
-                    Here's a time line of Dr. Borlaug's life:
+                    Here's a time line of Hugo Sánchez's life:
                 </h3>
                 <ul>
-                    <li><strong>1914</strong> - Born in Cresco, Iowa</li>
+                    <li><strong>1958</strong> - Born in Mexico City, Mexico</li>
                     <li>
-                    <strong>1933</strong> - Leaves his family's farm to attend the
-                    University of Minnesota, thanks to a Depression era program known as the
-                    "National Youth Administration"
+                    <strong>1976</strong> - As a teenager, Hugo played for Mexico national team at the 1976 Summer Olympics. 
+                    In this year he also started his professional career, playing for "Pumas de la UNAM" team in Mexican First Division Football League.
                     </li>
                     <li>
-                    <strong>1935</strong> - Has to stop school and save up more money. Works
-                    in the Civilian Conservation Corps, helping starving Americans. "I saw
-                    how food changed them", he said. "All of this left scars on me."
+                    <strong>1978</strong> - In this year, he played his first World Cup with Mexican national team in Argentina. 
+                    Unfortunately, Mexican team had a very bad performance.
                     </li>
                     <li>
-                    <strong>1937</strong> - Finishes university and takes a job in the US
-                    Forestry Service
+                    <strong>1979</strong> - He played for the San Diego Sockers team in the North American Soccer League" during the summer 
+                    & in the Mexican League during the fall, summer & spring.
                     </li>
                     <li>
-                    <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets
-                    laid off due to budget cuts. Inspired by Elvin Charles Stakman, he
-                    returns to school study under Stakman, who teaches him about breeding
-                    pest-resistent plants.
+                    <strong>1981</strong> - In his last year playing for "Pumas de la UNAM", he won with his team the Mexican League, 
+                    a CONCACAF Champions League & a "Copa Interamericana". During his tenure playing in Mexico and US, he became a prolific striker & 
+                    in this last year in Mexico, he was the top scorer with 26 goals.
                     </li>
                     <li>
-                    <strong>1941</strong> - Tries to enroll in the military after the Pearl
-                    Harbor attack, but is rejected. Instead, the military asked his lab to
-                    work on waterproof glue, DDT to control malaria, disinfectants, and
-                    other applied science.
+                    <strong>1982</strong> - Atlético Madrid signed him. During the first 2 years, it took Hugo a while to find his feet in "La Liga". 
+                    During these 2 years of struggle, he never gave up & even accepted a 50% reduction on his salary, just to continue playing in the best
+                    football leagues in Europe.
                     </li>
                     <li>
-                    <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
+                    <strong>1984</strong> - In the 1984-1985 season, Hugo had his first big success in "La Liga", 
+                    winning his first Pichichi trophy for being the most prolific scorer in the league, scoring 26 goals. 
+                    On this last year with Atlético Madrid, his team won the "Copa del Rey", finished second in the league 
+                    and won the "Spanish Super Copa".
                     </li>
                     <li>
-                    <strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-                    leaves behind his pregnant wife, and flies to Mexico to head a new plant
-                    pathology program. Over the next 16 years, his team breeds 6,000
-                    different strains of disease resistent wheat - including different
-                    varieties for each major climate on Earth.
+                    <strong>1985</strong> - Real Madrid signed Hugo. This was a very difficult and controversial transfer between 2 rival teams in "La Liga". 
+                    This happened only with the help of former Hugo's team, "Pumas de la UNAM", which played an intermediary role on this exchange. 
                     </li>
                     <li>
-                    <strong>1945</strong> - Discovers a way to grown wheat twice each
-                    season, doubling wheat yields
+                    <strong>1985 - 1990</strong> - On his amazing 5 years tenure with Real Madrid, he won 4 consecutive Pichichi trophies, becoming the only
+                    player to achieve this in Spanish football history, and one of 4 players to win 5 Pichichis. With his team he won 5 consecutive league titles, 
+                    a Copa del Rey in 1989 and a UEFA cup in 1986. He scored 38 goals in 1989-90 season, earning the European Golden Boot award for the best scorer
+                    in Europe and tying "La Liga" single-season record set in 1951 by Telmo Zarra. For these amazing years in Spain, he is considered in the top 
+                    25 best football players in history. In 1986, he played his second World Cup in Mexico, in which he scored 2 goals, helping the Mexican national team
+                    to reach for the first and only time the quaterfinals stage. 
                     </li>
                     <li>
-                    <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-                    with a high-yeidling American breed, creating a strain that responds
-                    well to fertilizer. It goes on to provide 95% of Mexico's wheat.
+                    <strong>1992</strong> - He returned to play in Mexico after playing for a variety of teams in Spain, Austria and US.  
                     </li>
                     <li>
-                    <strong>1962</strong> - Visits Delhi and brings his high-yielding
-                    strains of wheat to the Indian subcontinent in time to help mitigate
-                    mass starvation due to a rapidly expanding population
-                    </li>
-                    <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-                    <li>
-                    <strong>1983</strong> - helps seven African countries dramatically
-                    increase their maize and sorghum yields
+                    <strong>1993</strong> - At the age of 35, he helped the Mexican national team to reach the final in America Cup in Ecuador. 
+                    Mexican team lost the final vs Argentina. 
                     </li>
                     <li>
-                    <strong>1984</strong> - becomes a distinguished professor at Texas A&M
-                    University
+                    <strong>1994</strong> - Hugo played his last Worl Cup in US with Mexican National team. 
+                    Mexico lost in the first knockout game vs Bulgaria in penalty kicks and the Mexican coach was hardly 
+                    criticized as he kept Hugo on bench during the whole match. People in Mexico are always wondering what would
+                    happen if this terrific scorer would have played the last minutes of the match.
                     </li>
                     <li>
-                    <strong>2005</strong> - states "we will have to double the world food
-                    supply by 2050." Argues that genetically modified crops are the only way
-                    we can meet the demand, as we run out of arable land. Says that GM crops
-                    are not inherently dangerous because "we've been genetically modifying
-                    plants and animals for a long time. Long before we called it science,
-                    people were selecting the best breeds."
+                    <strong>1998</strong> - Hugo officially retired as a player and immediately he started his preparation as football manager.
                     </li>
-                    <li><strong>2009</strong> - dies at the age of 95.</li>            
+                    <li><strong>2000</strong> - He started his managerial career in former club "Pumas de la UNAM".</li>
+                    <li>
+                    <strong>2004</strong> - On this year, he had great success as manager, when Pumas team won everything they played in: 
+                    Clausura 2004, Apertura 2004, Champion of Champions 2004 and Santiago Bernabeu Cup vs his former team Real Madrid. 
+                    </li>
+                    <li>
+                    <strong>2007-2008</strong> - Hugo became the manager of Mexican national team in 2007, and on this year Mexican team finished third in America Cup, 
+                    defeating Brazil in the tournament. Unfortunately, in 2008 U23 Mexican team was eliminated in the Pre-Olympic qualifying tournament on goal 
+                    difference & Hugo was fired as Mexican head coach.
+                    </li>
+                    <li>
+                    <strong>2009</strong> - He had the opportunity to coach Almeria in Spain, but after accomplishing the goal of avoiding relegation from "La Liga", 
+                    he was released at the end of the year. 
+                    </li>
+                    <li><strong>2015</strong> - From 2015, he has been working as a football analyst commentator in ESPN in Mexico and the US.</li>            
                 </ul>
-                <blockquote cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+                <blockquote cite="https://en.as.com/en/2020/05/11/soccer/1589226431_496042.html">
                     <p>
-                        "Borlaug's life and achievement are testimony to the far-reaching
-                contribution that one man's towering intellect, persistence and
-                scientific vision can make to human peace and progress."
+                        "Hugo Sánchez has a higher football IQ than Cristiano Ronaldo."
                     </p>
                     <cite>
-                        -- Indian Prime Minister Manmohan Singh
+                        -- Angel Cappa, Argentinian football coach & commentator 
                     </cite>
                 </blockquote>
                 <h3>
-                    If you have time, you should read more about this incredible human being on his
+                    If you have time, you should read more about this incredible Mexican footballer on his
                     <a  id="tribute-link"
-                        href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+                        href="https://en.wikipedia.org/wiki/Hugo_Sánchez"
                         target="_blank">
                         Wikipedia entry
                     </a>.
